<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.gipilab.simulateurdeplacements.MainActivity">

        <TextView
            android:id="@+id/labelVariation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/gridLayout"
            android:labelFor="@+id/layoutVariation"
            android:text="@string/labelVariation"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/layoutVariation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/labelVariation"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editVariation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:autoText="false"
                android:ems="10"
                android:hint="@string/editVariationHint"
                android:inputType="numberSigned|numberDecimal"
                android:text="0" />

            <TextView
                android:id="@+id/textViewEurosPar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eurosPar"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinnerFrequenceVariation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:entries="@array/periodiciteVariation" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonCalculer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/layoutVariation"
            android:onClick="buttonCalculerClick"
            android:text="@string/buttonCalculer" />

        <LinearLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutTaux"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelDureeDuPlacementSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelSectionDureePlacement"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true" />

            <Switch
                android:id="@+id/switchDateDeFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:textOff="@string/switchChoisirDateOFF"
                android:textOn="@string/switchChoisirDateON" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelDateDebut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateDebutPlacement" />

                <TextView
                    android:id="@+id/labelSelectedDateDebut"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:gravity="right"
                    android:text="01/01/2000"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateFinPlacement" />

                <TextView
                    android:id="@+id/labelSelectedDateFin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="01/01/2001"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/labelDuree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="duree"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutCapital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editCapital"
                android:text="@string/labelCapital"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editCapital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editCapitalHint"
                android:inputType="numberDecimal"
                android:numeric="decimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutTaux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutCapital"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelTaux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/editTaux"
                android:text="@string/labelTaux"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTaux"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editTauxHint"
                android:inputType="numberDecimal"
                android:numeric="decimal" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>